package ohla.rti.messages.proto;

option java_package = "net.sf.ohla.rti.messages.proto";

import "OHLAProtos.proto";

enum MessageType
{
  FDD_UPDATED = 1;

  CREATE_FEDERATION_EXECUTION = 2;
  CREATE_FEDERATION_EXECUTION_RESPONSE = 3;

  DESTROY_FEDERATION_EXECUTION = 4;
  DESTROY_FEDERATION_EXECUTION_RESPONSE = 5;

  LIST_FEDERATION_EXECUTIONS = 6;

  JOIN_FEDERATION_EXECUTION = 7;
  JOIN_FEDERATION_EXECUTION_RESPONSE = 8;

  RESIGN_FEDERATION_EXECUTION = 9;
  RESIGNED_FEDERATION_EXECUTION = 10;

  REGISTER_FEDERATION_SYNCHRONIZATION_POINT = 11;
  SYNCHRONIZATION_POINT_ACHIEVED = 12;

  REQUEST_FEDERATION_SAVE = 13;
  REQUEST_FEDERATION_SAVE_RESPONSE = 14;

  FEDERATE_SAVE_BEGUN = 15;
  FEDERATE_SAVE_COMPLETE = 16;
  FEDERATE_SAVE_NOT_COMPLETE = 17;

  ABORT_FEDERATION_SAVE = 18;
  ABORT_FEDERATION_SAVE_RESPONSE = 19;

  QUERY_FEDERATION_SAVE_STATUS = 20;

  REQUEST_FEDERATION_RESTORE = 21;
  REQUEST_FEDERATION_RESTORE_RESPONSE = 22;

  FEDERATE_RESTORE_COMPLETE = 23;
  FEDERATE_RESTORE_NOT_COMPLETE = 24;

  ABORT_FEDERATION_RESTORE = 25;
  ABORT_FEDERATION_RESTORE_RESPONSE = 26;

  QUERY_FEDERATION_RESTORE_STATUS = 27;

  PUBLISH_OBJECT_CLASS_ATTRIBUTES = 28;
  UNPUBLISH_OBJECT_CLASS = 29;
  UNPUBLISH_OBJECT_CLASS_ATTRIBUTES = 30;

  PUBLISH_INTERACTION_CLASS = 31;
  UNPUBLISH_INTERACTION_CLASS = 32;

  SUBSCRIBE_OBJECT_CLASS_ATTRIBUTES = 33;
  UNSUBSCRIBE_OBJECT_CLASS_ATTRIBUTES = 34;

  SUBSCRIBE_INTERACTION_CLASS = 35;
  UNSUBSCRIBE_INTERACTION_CLASS = 36;

  RESERVE_OBJECT_INSTANCE_NAME = 37;
  RELEASE_OBJECT_INSTANCE_NAME = 38;

  RESERVE_MULTIPLE_OBJECT_INSTANCE_NAME = 39;
  MULTIPLE_OBJECT_INSTANCE_NAME_RESERVATION_SUCCEEDED = 40;
  MULTIPLE_OBJECT_INSTANCE_NAME_RESERVATION_FAILED = 41;

  RELEASE_MULTIPLE_OBJECT_INSTANCE_NAME = 42;

  REGISTER_OBJECT_INSTANCE = 43;

  UPDATE_ATTRIBUTE_VALUES = 44;

  SEND_INTERACTION = 45;

  DELETE_OBJECT_INSTANCE = 46;
  LOCAL_DELETE_OBJECT_INSTANCE = 47;

  REQUEST_OBJECT_INSTANCE_ATTRIBUTE_VALUE_UPDATE = 48;
  REQUEST_OBJECT_CLASS_ATTRIBUTE_VALUE_UPDATE = 49;
  REQUEST_OBJECT_CLASS_ATTRIBUTE_VALUE_UPDATE_WITH_REGIONS = 50;

  SET_AUTOMATIC_RESIGN_DIRECTIVE = 51;

  GET_FEDERATE_HANDLE = 52;
  GET_FEDERATE_HANDLE_RESPONSE = 53;

  GET_FEDERATE_NAME = 54;
  GET_FEDERATE_NAME_RESPONSE = 55;

  GET_UPDATE_RATE_VALUE_FOR_ATTRIBUTE = 56;
  GET_UPDATE_RATE_VALUE_FOR_ATTRIBUTE_RESPONSE = 57;

  QUERY_INTERACTION_TRANSPORTATION_TYPE = 58;
  REPORT_INTERACTION_TRANSPORTATION_TYPE = 59;

  UNCONDITIONAL_ATTRIBUTE_OWNERSHIP_DIVESTITURE = 60;
  NEGOTIATED_ATTRIBUTE_OWNERSHIP_DIVESTITURE = 61;
  CONFIRM_DIVESTITURE = 62;
  ATTRIBUTE_OWNERSHIP_ACQUISITION = 63;
  ATTRIBUTE_OWNERSHIP_ACQUISITION_IF_AVAILABLE = 64;
  ATTRIBUTE_OWNERSHIP_DIVESTITURE_IF_WANTED = 65;
  ATTRIBUTE_OWNERSHIP_DIVESTITURE_IF_WANTED_RESPONSE = 66;
  CANCEL_NEGOTIATED_ATTRIBUTE_OWNERSHIP_DIVESTITURE = 67;
  CANCEL_ATTRIBUTE_OWNERSHIP_ACQUISITION = 68;
  QUERY_ATTRIBUTE_OWNERSHIP = 69;

  ENABLE_TIME_REGULATION = 70;
  DISABLE_TIME_REGULATION = 71;

  ENABLE_TIME_CONSTRAINED = 72;
  DISABLE_TIME_CONSTRAINED = 73;

  TIME_ADVANCE_REQUEST = 74;
  TIME_ADVANCE_REQUEST_AVAILABLE = 75;

  NEXT_MESSAGE_REQUEST = 76;
  NEXT_MESSAGE_REQUEST_AVAILABLE = 77;

  FLUSH_QUEUE_REQUEST = 78;

  QUERY_GALT = 79;
  QUERY_GALT_RESPONSE = 80;

  QUERY_LITS = 81;
  QUERY_LITS_RESPONSE = 82;

  MODIFY_LOOKAHEAD = 83;

  RETRACT = 84;
  RETRACT_RESPONSE = 85;

  CREATE_REGION = 86;

  COMMIT_REGION_MODIFICATIONS = 87;
  DELETE_REGION = 88;

  ASSOCIATE_REGIONS_FOR_UPDATES = 89;
  ASSOCIATE_REGIONS_FOR_UPDATES_RESPONSE = 90;

  UNASSOCIATE_REGIONS_FOR_UPDATES = 91;
  UNASSOCIATE_REGIONS_FOR_UPDATES_RESPONSE = 92;

  SUBSCRIBE_OBJECT_CLASS_ATTRIBUTES_WITH_REGIONS = 93;
  UNSUBSCRIBE_OBJECT_CLASS_ATTRIBUTES_WITH_REGIONS = 94;

  SUBSCRIBE_INTERACTION_CLASS_WITH_REGIONS = 95;
  UNSUBSCRIBE_INTERACTION_CLASS_WITH_REGIONS = 96;

  REPORT_FEDERATION_EXECUTIONS = 97;

  SYNCHRONIZATION_POINT_REGISTRATION_SUCCEEDED = 98;
  SYNCHRONIZATION_POINT_REGISTRATION_FAILED = 99;

  ANNOUNCE_SYNCHRONIZATION_POINT = 100;

  FEDERATION_SYNCHRONIZED = 101;

  INITIATE_FEDERATE_SAVE = 102;

  FEDERATION_SAVED = 103;
  FEDERATION_NOT_SAVED = 104;

  FEDERATION_SAVE_STATUS_RESPONSE = 105;

  REQUEST_FEDERATION_RESTORE_SUCCEEDED = 106;
  REQUEST_FEDERATION_RESTORE_FAILED = 107;

  FEDERATION_RESTORE_BEGUN = 108;

  INITIATE_FEDERATE_RESTORE = 109;

  FEDERATION_RESTORED = 110;
  FEDERATION_NOT_RESTORED = 111;

  FEDERATION_RESTORE_STATUS_RESPONSE = 112;

  START_REGISTRATION_FOR_OBJECT_CLASS = 113;
  STOP_REGISTRATION_FOR_OBJECT_CLASS = 114;

  TURN_INTERACTIONS_ON = 115;
  TURN_INTERACTIONS_OFF = 116;

  OBJECT_INSTANCE_NAME_RESERVATION_SUCCEEDED = 117;
  OBJECT_INSTANCE_NAME_RESERVATION_FAILED = 118;

  DISCOVER_OBJECT_INSTANCE = 119;
  REFLECT_ATTRIBUTE_VALUES = 120;
  REMOVE_OBJECT_INSTANCE = 121;

  ATTRIBUTES_IN_SCOPE = 122;
  ATTRIBUTES_OUT_OF_SCOPE = 123;

  PROVIDE_ATTRIBUTE_VALUE_UPDATE = 124;

  TURN_UPDATES_ON_FOR_OBJECT_INSTANCE = 125;
  TURN_UPDATES_OFF_FOR_OBJECT_INSTANCE = 126;

  RECEIVE_INTERACTION = 127;

  REQUEST_ATTRIBUTE_OWNERSHIP_ASSUMPTION = 128;
  REQUEST_DIVESTITURE_CONFIRMATION = 129;
  ATTRIBUTE_OWNERSHIP_ACQUISITION_NOTIFICATION = 130;
  ATTRIBUTE_OWNERSHIP_UNAVAILABLE = 131;
  REQUEST_ATTRIBUTE_OWNERSHIP_RELEASE = 132;
  CONFIRM_ATTRIBUTE_OWNERSHIP_ACQUISITION_CANCELLATION = 133;
  INFORM_ATTRIBUTE_OWNERSHIP = 134;
  ATTRIBUTE_IS_NOT_OWNED = 135;
  ATTRIBUTE_IS_OWNED_BY_RTI = 136;

  TIME_REGULATION_ENABLED = 137;
  TIME_CONSTRAINED_ENABLED = 138;
  TIME_ADVANCE_GRANT = 139;

  REQUEST_RETRACTION = 140;

  FEDERATE_STATE_FRAME = 141;
}

message AttributeValue
{
  required uint32 attributeHandle = 1;
  required bytes value = 2;
}

message ParameterValue
{
  required uint32 parameterHandle = 1;
  required bytes value = 2;
}

message FederateStateFrame
{
  required bytes payload = 1;
  required bool last = 2;
}
